# retina

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: docs.yml  rust.yml
docs/: EnvironmentVariables.md
resources/style/file-viewer/: json.css
retina/: Cargo.toml
retina-common/: Cargo.toml  README.md
retina-common/src/: byte_unit_format_wrapper.rs  color.rs  dumpable.rs  dynamic_size_of.rs  lib.rs  scaling.rs  str.rs  time.rs  transparent_wrapper.rs
retina-compositor/: Cargo.toml
retina-compositor/src/: lib.rs  painting.rs  tile.rs  trace.rs
retina-debug/: Cargo.toml
retina-debug/src/: lib.rs  win.rs
retina-dom/: Cargo.toml
retina-dom/src/: attribute.rs  character_data.rs  comment.rs  document.rs  element.rs  element_kind.rs  lib.rs  node.rs  parent_node.rs  platform_messenger.rs  text.rs  wrapper.rs
retina-dom/src/data/: image.rs  mod.rs
retina-dom/src/event/: mod.rs  queue.rs
retina-dom/src/html/: html_element.rs  html_img_element.rs  html_link_element.rs  html_style_element.rs  html_unknown_element.rs  lazy_loading.rs  link_kind.rs  link_relationship.rs  link_type.rs  mod.rs
retina-dom/src/parse/: mod.rs
retina-fetch/: Cargo.toml  README.md
retina-fetch/examples/: simple.rs
retina-fetch/src/: destination.rs  error.rs  fetch.rs  initiator.rs  lib.rs  mode.rs  promise.rs  referrer.rs  request.rs  response.rs  status_code.rs
retina-file-viewer/: Cargo.toml  README.md
retina-file-viewer/src/: dom_wrap.rs  lib.rs
retina-gfx/: Cargo.toml
retina-gfx-font/: Cargo.toml
retina-gfx-font-backend-dwrite/: Cargo.toml
retina-gfx-font-backend-dwrite/src/: color_glyph_run_analysis.rs  com.rs  lib.rs
retina-gfx-font-backend-font-kit/: Cargo.toml
retina-gfx-font-backend-font-kit/src/: family.rs  font.rs  harfbuzz_util.rs  lib.rs  provider.rs
retina-gfx-font-renderer/: Cargo.toml
retina-gfx-font-renderer/src/: lib.rs  shader.wgsl
retina-gfx-font/src/: bridge.rs  descriptor.rs  family.rs  features.rs  font.rs  handle.rs  harfbuzz_util.rs  lib.rs  provider.rs
retina-gfx-font/src/backend/: font_kit.rs  mod.rs
retina-gfx-font/src/renderer/: mod.rs  shader.wgsl
retina-gfx-gui/: Cargo.toml
retina-gfx-gui/src/: attach_error.rs  context_menu.rs  lib.rs
retina-gfx-gui/src/win32/: mod.rs
retina-gfx-wgpu/: Cargo.toml
retina-gfx-wgpu/src/: context.rs  painter.rs
retina-gfx-wgpu/src/canvas/: mod.rs
retina-gfx-wgpu/src/math/: mod.rs
retina-gfx-wgpu/src/vertex/: colored_vertex.rs  colored_vertex.wgsl  mod.rs  textured_vertex.rs
retina-gfx-wgpu/src/window/: builder.rs  painter.rs  state.rs
retina-gfx/src/: color.rs  context.rs  features.rs  font.rs  font_descriptor.rs  future.rs  glyph_brush.rs  lib.rs  painter.rs  texture.rs  window.rs
retina-gfx/src/canvas/: mod.rs
retina-gfx/src/font/: descriptor.rs  font.rs  handle.rs  provider.rs
retina-gfx/src/material/: color.rs  mod.rs  texture.rs
retina-gfx/src/paint/: color_paint.rs  mod.rs
retina-gfx/src/vertex/: colored_vertex.rs  colored_vertex.wgsl  mod.rs  textured_vertex.rs  textured_vertex.wgsl
retina-gfx/src/window/: builder.rs  event_proxy.rs  glyph_brush.rs  interface.rs  keyboard.rs  mod.rs  painter.rs  render_pass.rs  state.rs  swap_chain.rs
retina-i18n/: Cargo.toml
retina-i18n/src/: ietf_language_tag.rs  lib.rs
retina-layout/: Cargo.toml
retina-layout/src/: actual_values.rs  generate.rs  lib.rs  replaced.rs  text.rs  white_space.rs
retina-layout/src/boxes/: dimensions.rs  edge.rs  line.rs  mod.rs
retina-layout/src/formatting_context/: block.rs  inline.rs  mod.rs
retina-layout/src/text/: char_properties.rs  uts51.rs
retina-media-type/: Cargo.toml
retina-media-type/src/: image.rs  lib.rs
retina-page/: Cargo.toml
retina-page/src/: command.rs  cursor_state.rs  dirty_state.rs  font_loader.rs  handle.rs  image_provider.rs  lib.rs  message.rs  page.rs  scroller.rs
retina-page/src/built_in/: about.rs  mod.rs
retina-platform-object/: Cargo.toml
retina-platform-object/src/: event_target.rs  lib.rs  prelude.rs
retina-platform-object/src/dom/: document.rs  mod.rs
retina-platform-object/src/nav_history/: mod.rs  window.rs
retina-scrittura/: Cargo.toml
retina-scrittura/src/: host_hooks.rs  job_queue.rs  lib.rs  test_helper.rs
retina-scrittura/tests/: window.rs
retina-scrittura/tests/window/: simple.js
retina-style/: Cargo.toml
retina-style-computation/: Cargo.toml
retina-style-computation/src/: cascade.rs  collect.rs  compute.rs  lib.rs  property_map.rs  selector_match.rs  selector_specificity.rs
retina-style-parser/: Cargo.toml
retina-style-parser/src/: context.rs  declaration_parser.rs  error.rs  font_face_parser.rs  lib.rs  rule_parser.rs  selector_parser.rs  util.rs  value_parser.rs
retina-style/src/: cascade_origin.rs  declaration.rs  lib.rs  media.rs  property.rs  rule.rs  selector.rs  stylesheet.rs
retina-style/src/parse/: declaration_parser.rs  error.rs  mod.rs  rule_parser.rs  selector_parser.rs  value_parser.rs
retina-style/src/rule/: font_face.rs
retina-style/src/selector/: pseudo.rs
retina-style/src/value/: background.rs  color.rs  cursor.rs  display.rs  float.rs  font.rs  image.rs  length.rs  mod.rs  (+5 more)
retina-svg/: Cargo.toml
retina-svg-layout/: Cargo.toml
retina-svg-layout/src/: lib.rs  node.rs  paint.rs
retina-svg/examples/: simple.rs
retina-svg/shaders/: geometry.wgsl
retina-svg/src/: direct2d.rs  lib.rs  node.rs  painter.rs  path.rs  tesselator.rs  unit.rs
retina-svg/src/direct2d/: factory.rs  mod.rs
retina-svg/src/node/: rect.rs  svg.rs
retina-svg/src/path/: error.rs  mod.rs  parse_command.rs  parse_coordinate.rs  parse_elliptic.rs  parse_literal.rs
retina-user-agent/: Cargo.toml
retina-user-agent/src/: lib.rs  stylesheet.css  stylesheet.rs
retina-woff/: Cargo.toml
retina-woff/src/: constants.rs  error.rs  header.rs  lib.rs  sfnt.rs
retina/src/: app.rs  event.rs  http.rs  main.rs  old-main.rs
src/: http.rs  main.rs
tools/: reserve-name.sh
tools/crate-template/: Cargo.toml  README.md
tools/retina-browser/: Cargo.toml  README.md
(+43 files in other folders)
