[workspace]
members = [
    "retina",
    "retina-common",
    "retina-compositor",
    "retina-debug",
    "retina-dom",
    "retina-fetch",
    "retina-gfx",
    "retina-gfx-gui",
    "retina-gfx-font",
    "retina-layout",
    "retina-media-type",
    "retina-page",
    "retina-platform-object",
    "retina-scrittura",
    "retina-style",
    "retina-style-computation",
    "retina-style-parser",
    "retina-svg-layout",
    "retina-user-agent",
]

resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
