[workspace]
members = [
    "third-party/dwrote-rs",
    "third-party/font-kit",
    "retina",
    "retina-common",
    "retina-compositor",
    "retina-debug",
    "retina-dom",
    "retina-fetch",
    "retina-gfx",
    "retina-gfx-font",
    "retina-gfx-font-backend-dwrite",
    "retina-gfx-font-backend-font-kit",
    "retina-gfx-font-renderer",
    "retina-gfx-gui",
    "retina-i18n",
    "retina-layout",
    "retina-media-type",
    "retina-page",
    "retina-platform-object",
    "retina-scrittura",
    "retina-style",
    "retina-style-computation",
    "retina-style-parser",
    "retina-svg-layout",
    "retina-user-agent",
    "retina-woff",
]

resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
