[package]
name = "retina-compositor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-dom = { path = "../retina-dom" }
retina-gfx = { path = "../retina-gfx" }
retina-layout = { path = "../retina-layout" }
retina-style = { path = "../retina-style" }
retina-style-computation = { path = "../retina-style-computation" }

log = "*"
profiling = { version = "*", features = ["profile-with-tracing"] }
tracing = "*"
tracing-chrome = "*"
tracing-subscriber = "*"
wgpu = { version = "*", features = ["trace"] }
