[package]
name = "retina-dom"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-fetch = { path = "../retina-fetch" }
retina-i18n = { path = "../retina-i18n" }
retina-media-type = { path = "../retina-media-type" }

log = "*"
html5ever = "*"
image = "*"
strum = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
tendril = "*"
