[package]
name = "retina-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "This crate implements the Fetch API, for the Retina browser, but can be used independently."
homepage = "https://github.com/usadson/retina/tree/main/retina-fetch"
repository.workspace = true

[dependencies]
futures-core = "*"

tokio = { version = "*", features = [
    "full" # TODO
] }

tokio-util = { version = "*", features = [
    "codec",
] }

http = "*"
hyper = { version = "*", features = [
    "client",
    "http1",
    "http2",
    "stream",
] }

hyper-tls = "*"
log = "*"
mime = "*"
strum = { version = "*", features = ["derive"] }
url = "*"

[dev-dependencies]
rstest = "*"
