[package]
name = "retina-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "This crate implements the Fetch API, for the Retina browser, but can be used independently."
homepage = "https://github.com/usadson/retina/tree/main/retina-fetch"
repository.workspace = true

[dependencies]
futures-core = "0.3.28"

tokio = { version = "1.32", features = [
    "fs",
    "rt-multi-thread",
] }

tokio-util = { version = "0.7.8", features = [
    "codec",
] }

http = "0.2.9"
hyper = { version = "0.14.27", features = [
    "client",
    "http1",
    "http2",
    "stream",
] }

hyper-tls = "0.5.0"
log = "0.4.2"
mime = "0.3.17"
strum = { version = "0.25", features = ["derive"] }
url = "2.4.0"

flate2 = "1"
brotli = { version = "3", default-features = false, features = ["std"] }

[dev-dependencies]
rstest = "0.18"
