[package]
name = "retina-gfx-font-backend-dwrite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }

bytemuck = "*"
dwrote = { path = "../third-party/dwrote-rs" }
euclid = "*"
font-kit = { path = "../third-party/font-kit" }
log = "*"
pathfinder_geometry = "*"

windows = { version = "*", features = [
    "Win32_Foundation",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D_Common",
] }
