[package]
name = "retina-gfx-font-backend-dwrite"
version.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(windows)'.dependencies]
retina-common = { path = "../retina-common" }

bytemuck = "*"
euclid = "*"
font-kit = { path = "../third-party/font-kit" }
log = "*"
pathfinder_geometry = "*"

dwrote = { path = "../third-party/dwrote-rs" }
windows = { version = "*", features = [
    "Win32_Foundation",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D_Common",
] }
