[package]
name = "retina-gfx-font-backend-font-kit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-gfx = { path = "../retina-gfx" }
retina-gfx-font-renderer = { path = "../retina-gfx-font-renderer" }

bytemuck = "*"
dashmap = { version = "*", features = ["rayon"] }
euclid = "*"
font-kit = "*"
harfbuzz_rs = "*"
log = "*"
ouroboros = "*"
pathfinder_geometry = "*"
rayon = "*"
tracing = "*"
wgpu = { version = "*", features = ["trace"] }
