[package]
name = "retina-gfx-font-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-gfx = { path = "../retina-gfx" }

bytemuck = "*"
log = "*"
tracing = "*"
wgpu = { version = "*", features = ["trace"] }
