[package]
name = "retina-gfx-font"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-gfx = { path = "../retina-gfx" }
font-kit = "*"
euclid = "*"
log = "*"
pathfinder_geometry = "*"
wgpu = { version = "*", features = ["trace"] }
wgpu_glyph = "*"
