[package]
name = "retina-gfx-font"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-gfx = { path = "../retina-gfx" }

bytemuck = "*"
euclid = "*"
font-kit = "*"
log = "*"
pathfinder_geometry = "*"
rayon = "*"
wgpu = { version = "*", features = ["trace"] }
wgpu_glyph = "*"
