[package]
name = "retina-gfx-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-gfx = { path = "../retina-gfx" }

futures = "*"
bytemuck = { version = "*", features = ["derive"] }
euclid = "*"
image = "*"
log = "*"
raw-window-handle = "*"
tracing = "*"
winit = "0.28.6"
wgpu = { version = "*", features = ["trace"] }
