[package]
name = "retina-gfx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }

futures = "*"
bytemuck = "*"
euclid = "*"
log = "*"
tracing = "*"
winit = "0.28.6"
wgpu = { version = "*", features = ["trace"] }
wgpu_glyph = "*"
