[package]
name = "retina-gfx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }

futures = "*"
bytemuck = { version = "*", features = ["derive"] }
euclid = "*"
image = "*"
log = "*"
raw-window-handle = "*"
tracing = "*"
winit = "0.28.6"

unicase = "*"
