[package]
name = "retina-layout"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-dom = { path = "../retina-dom" }
retina-gfx-font = { path = "../retina-gfx-font" }
retina-style = { path = "../retina-style" }
retina-style-computation = { path = "../retina-style-computation" }

euclid = "*"
log = "*"

[dev-dependencies]
rstest = "*"
