[package]
name = "retina-layout"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-dom = { path = "../retina-dom" }
retina-fetch = { path = "../retina-fetch" }
retina-i18n = { path = "../retina-i18n" }
retina-gfx = { path = "../retina-gfx" }
retina-style = { path = "../retina-style" }
retina-style-computation = { path = "../retina-style-computation" }

euclid = "*"
log = "*"
unicode-properties = "*"
unicode-segmentation = "*"

[dev-dependencies]
rstest = "*"
