[package]
name = "retina-page"
version.workspace = true
edition.workspace = true

[dependencies]
retina-compositor = { path = "../retina-compositor" }
retina-dom = { path = "../retina-dom" }
retina-gfx = { path = "../retina-gfx" }
retina-layout = { path = "../retina-layout" }
retina-style = { path = "../retina-style" }
retina-style-parser = { path = "../retina-style-parser" }
retina-user-agent = { path = "../retina-user-agent" }

log = "*"
tokio = { version = "*", features = ["full"] }
url = "*"
wgpu = "*"
