[package]
name = "retina-page"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-compositor = { path = "../retina-compositor" }
retina-debug = { path = "../retina-debug" }
retina-dom = { path = "../retina-dom" }
retina-fetch = { path = "../retina-fetch" }
retina-file-viewer = { path = "../retina-file-viewer" }
retina-gfx = { path = "../retina-gfx" }
retina-gfx-font = { path = "../retina-gfx-font" }
retina-gfx-gui = { path = "../retina-gfx-gui" }
retina-layout = { path = "../retina-layout" }
retina-media-type = { path = "../retina-media-type" }
retina-scrittura = { path = "../retina-scrittura" }
retina-style = { path = "../retina-style" }
retina-style-parser = { path = "../retina-style-parser" }
retina-user-agent = { path = "../retina-user-agent" }

log = "*"
tokio = { version = "*", features = ["full"] }
url = "*"
wgpu = { version = "*", features = ["trace"] }

rs-woff = "*"
woff2 = "*"
