[package]
name = "retina-scrittura"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-dom = { path = "../retina-dom" }
retina-platform-object = { path = "../retina-platform-object" }

log = "*"
boa_engine = { version = "*", features = ["intl"] }
boa_gc = "*"

[dev-dependencies]
env_logger = "*"
rayon = "*"
