[package]
name = "retina-style-computation"
version.workspace = true
edition.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-dom = { path = "../retina-dom" }
retina-style = { path = "../retina-style" }

tendril = "*"

[dev-dependencies]
retina-style-parser = { path = "../retina-style-parser" }

pretty_assertions = "*"
rstest = "*"
