[package]
name = "retina-style-computation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-dom = { path = "../retina-dom" }
retina-style = { path = "../retina-style" }
retina-style-parser = { path = "../retina-style-parser" }

log = "*"
tendril = "*"

[dev-dependencies]
pretty_assertions = "*"
rstest = "*"
