[package]
name = "retina-svg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-fetch = { path = "../retina-fetch" }
retina-gfx-font = { path = "../retina-gfx-font" }
retina-style = { path = "../retina-style" }
retina-style-computation = { path = "../retina-style-computation" }

euclid = "*"
log = "*"

[dev-dependencies]
rstest = "*"
