[package]
name = "retina-svg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-dom = { path = "../retina-dom" }
retina-gfx = { path = "../retina-gfx" }
retina-style = { path = "../retina-style" }
retina-style-parser = { path = "../retina-style-parser" }

bytemuck = "*"
log = "*"
lyon = "*"
strum = { version = "*", features = ["derive"] }
tendril = "*"
wgpu = "*"

[dev-dependencies]
pretty_assertions = "*"
rstest = "*"
