[package]
name = "retina-svg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-common = { path = "../retina-common" }
retina-dom = { path = "../retina-dom" }
retina-style = { path = "../retina-style" }
retina-style-parser = { path = "../retina-style-parser" }

bytemuck = "*"
euclid = "*"
log = "*"
lyon = "*"
strum = { version = "*", features = ["derive"] }
tendril = "*"
winit = "*"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "*"
windows = { version = "*", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
] }

[dev-dependencies]
env_logger = "*"
