[package]
name = "retina"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-gfx = { path = "../retina-gfx" }
retina-gfx-font = { path = "../retina-gfx-font" }
retina-page = { path = "../retina-page" }

env_logger = "*"
log = "*"
url = "*"
wgpu = { version = "*", features = ["trace"] }
