[package]
name = "retina"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
retina-fetch = { path = "../retina-fetch" }
retina-gfx = { path = "../retina-gfx" }
retina-gfx-font = { path = "../retina-gfx-font" }
retina-gfx-font-backend-font-kit = { path = "../retina-gfx-font-backend-font-kit" }
retina-gfx-gui = { path = "../retina-gfx-gui" }
retina-page = { path = "../retina-page" }

copypasta = "*"
env_logger = "*"
log = "*"
raw-window-handle = "*"
url = "*"
wgpu = { version = "*", features = ["trace"] }
